tests/neg/erased-var.scala
object Test {
  erased var i: Int = 1 // error
}
